[project]
name = "langutil-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langutil-llm",
    "lfx",
]

[tool.uv]
index-url = "https://mirrors.ustc.edu.cn/pypi/simple"

[tool.uv.sources]
lfx = { git = "https://github.com/drawmoon/langflow.git", subdirectory = "src/lfx", rev = "main" }
langutil-llm = { workspace = true }
