[project]
name = "langutil-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[cohere,ollama,openai]>=0.3.27",
    "langextract[openai]>=1.0.9",
]

[tool.uv]
index-url = "https://mirrors.ustc.edu.cn/pypi/simple"
